--- a/manifests/pvc.yml
+++ b/manifests/pvc.yml
@@ -5,8 +5,8 @@ metadata:
   namespace: postgres-ns
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 30Gi
+      storage: 1Gi
   storageClassName: standard-rwo
