--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,8 +14,8 @@ spec:
         app: postgresql
     spec:
       containers:
-      - name: postgresql
-        image: postgres:14
+      - name: postgres
+        image: postgres:16.0
         imagePullPolicy: IfNotPresent
         env:
         - name: POSTGRES_USER
@@ -30,11 +30,14 @@ spec:
               name: postgres-secret
         - name: POSTGRES_DB
           value: postgresdb
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata
         ports:
         - containerPort: 5432
         volumeMounts:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
+          subPath: postgres
     
       volumes:
       - name: postgres-storage
